--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aminyazdanpanah/php-shaka",
+    "name": "thedoctorteam/php-shaka",
     "type": "library",
     "description": "Shaka PHP is a library that uses Shaka Packager for DASH and HLS packaging and encryption, supporting Common Encryption for Widevine and other DRM Systems.",
     "keywords": [
@@ -14,11 +14,11 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "symfony/process": "^4.2|^5.0"
+        "php": ">=7.2",
+        "symfony/process": "^4.2|^5.0|^6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.1.4"
+        "phpunit/phpunit": "9.5.26"
     },
     "autoload": {
         "files": [
