--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,11 @@
         }
     ],
     "require": {
-        "php": "^7.2",
+        "php": ">=7.2",
         "symfony/process": "^4.2|^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "9.1.4"
+        "phpunit/phpunit": "9.5.26"
     },
     "autoload": {
         "files": [
